sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:11: error: not found: value j
      setValue(j, temp)
               ^